added stuff to numpy_exercises.ipynb

--- a/numpy_exercises.ipynb
+++ b/numpy_exercises.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "6"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,13 +134,6 @@
     "b=a+3\n",
     "len(b[b>=0])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -207,8 +200,11 @@
    "source": [
     "b=a.mean()\n",
     "c = a - b\n",
-    "print(c)\n",
-    "c.mean()"
+    "print(c) #array centered\n",
+    "c.mean()\n",
+    "\n",
+    "# or : use centered \n",
+    "\n"
    ]
   },
   {
@@ -245,7 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#8"
+    "#Other stuff"
    ]
   },
   {
@@ -263,11 +259,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#1"
+    "#shape of array\n",
+    "np.shape(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3, 6],\n",
+       "       [4, 7],\n",
+       "       [5, 8]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#transposing array dem\n",
+    "np.transpose(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3],\n",
+       "       [4],\n",
+       "       [5],\n",
+       "       [6],\n",
+       "       [7],\n",
+       "       [8]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#reshapes the array using tuple of ints\n",
+    "np.reshape(b, (6,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.707825127659933"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4  5]\n",
+      " [ 6  7  8  9 10]\n",
+      " [11 12 13 14 15]\n",
+      " [16 17 18 19 20]\n",
+      " [21 22 23 24 25]\n",
+      " [26 27 28 29 30]\n",
+      " [31 32 33 34 35]\n",
+      " [36 37 38 39 40]\n",
+      " [41 42 43 44 45]\n",
+      " [46 47 48 49 50]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(1,51)\n",
+    "b=np.reshape(a, (10,5))\n",
+    "print(b)"
    ]
   },
   {
