added more stuff to dataframes.ipynb

--- a/dataframes.ipynb
+++ b/dataframes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
        "11     Alan    92       62       72"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,13 +208,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>math</th>\n",
+       "      <th>english</th>\n",
+       "      <th>reading</th>\n",
+       "      <th>passing_english</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Sally</td>\n",
+       "      <td>62</td>\n",
+       "      <td>85</td>\n",
+       "      <td>80</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jane</td>\n",
+       "      <td>88</td>\n",
+       "      <td>79</td>\n",
+       "      <td>67</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Suzie</td>\n",
+       "      <td>94</td>\n",
+       "      <td>74</td>\n",
+       "      <td>95</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Billy</td>\n",
+       "      <td>98</td>\n",
+       "      <td>96</td>\n",
+       "      <td>88</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Ada</td>\n",
+       "      <td>77</td>\n",
+       "      <td>92</td>\n",
+       "      <td>98</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>John</td>\n",
+       "      <td>79</td>\n",
+       "      <td>76</td>\n",
+       "      <td>93</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Thomas</td>\n",
+       "      <td>82</td>\n",
+       "      <td>64</td>\n",
+       "      <td>81</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Marie</td>\n",
+       "      <td>93</td>\n",
+       "      <td>63</td>\n",
+       "      <td>90</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Albert</td>\n",
+       "      <td>92</td>\n",
+       "      <td>62</td>\n",
+       "      <td>87</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Richard</td>\n",
+       "      <td>69</td>\n",
+       "      <td>80</td>\n",
+       "      <td>94</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Isaac</td>\n",
+       "      <td>92</td>\n",
+       "      <td>99</td>\n",
+       "      <td>93</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Alan</td>\n",
+       "      <td>92</td>\n",
+       "      <td>62</td>\n",
+       "      <td>72</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "<bound method DataFrame.sort_values of        name  math  english  reading  passing_english\n",
+       "       name  math  english  reading  passing_english\n",
        "0     Sally    62       85       80            False\n",
        "1      Jane    88       79       67            False\n",
        "2     Suzie    94       74       95            False\n",
@@ -226,16 +353,19 @@
        "8    Albert    92       62       87             True\n",
        "9   Richard    69       80       94            False\n",
        "10    Isaac    92       99       93            False\n",
-       "11     Alan    92       62       72             True>"
+       "11     Alan    92       62       72             True"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.assign(passing_english = df[\"english\"] <=69).sort_values"
+    "df[\"passing_english\"] = df[\"english\"] <=69\n",
+    "\n",
+    "df.sort_values('passing_english')\n",
+    "df"
    ]
   },
   {
@@ -258,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +536,7 @@
        "6    Thomas    82       64       81             True"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +710,9 @@
     }
    ],
    "source": [
-    "df.assign(passing_english = df[\"english\"] <=69).sort_values(\"english\").sort_values(\"passing_english\")"
+    "df.assign(passing_english = df[\"english\"] <=69).sort_values(\"english\").sort_values(\"passing_english\")\n",
+    "\n",
+    "#better way to do it: df.sort_values()"
    ]
   },
   {
@@ -748,7 +880,9 @@
     }
    ],
    "source": [
-    "df.assign(overallgrade = (df[\"english\"] + df[\"math\"] + df[\"reading\"])/3)"
+    "df.assign(overallgrade = (df[\"english\"] + df[\"math\"] + df[\"reading\"])/3)\n",
+    "\n",
+    "#better way to do it df[new_column_name] = (df.column_name + df.column_name2 + df.column_name3) / 3"
    ]
   },
   {
@@ -1488,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1522,7 +1656,7 @@
        "      <th>city</th>\n",
        "      <th>highway</th>\n",
        "      <th>fl</th>\n",
-       "      <th>class</th>\n",
+       "      <th>class_of_vehicle</th>\n",
        "      <th>better_city_than_highway</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1711,29 +1845,89 @@
        "86          ford  f150 pickup 4wd    4.6  1999    8  manual(m5)   4    13   \n",
        "234   volkswagen           passat    3.6  2008    6    auto(s6)   f    17   \n",
        "\n",
-       "     highway fl    class  better_city_than_highway  \n",
-       "1         29  p  compact                     False  \n",
-       "161       24  r      suv                     False  \n",
-       "149       25  r  midsize                     False  \n",
-       "150       25  p  midsize                     False  \n",
-       "151       17  r      suv                     False  \n",
-       "..       ... ..      ...                       ...  \n",
-       "83        17  r      suv                     False  \n",
-       "84        17  r   pickup                     False  \n",
-       "85        17  r   pickup                     False  \n",
-       "86        16  r   pickup                     False  \n",
-       "234       26  p  midsize                     False  \n",
+       "     highway fl class_of_vehicle  better_city_than_highway  \n",
+       "1         29  p          compact                     False  \n",
+       "161       24  r              suv                     False  \n",
+       "149       25  r          midsize                     False  \n",
+       "150       25  p          midsize                     False  \n",
+       "151       17  r              suv                     False  \n",
+       "..       ... ..              ...                       ...  \n",
+       "83        17  r              suv                     False  \n",
+       "84        17  r           pickup                     False  \n",
+       "85        17  r           pickup                     False  \n",
+       "86        16  r           pickup                     False  \n",
+       "234       26  p          midsize                     False  \n",
        "\n",
        "[234 rows x 12 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mpg.assign(better_city_than_highway = mpg[\"city\"] > mpg['highway']).sort_values(by = \"better_city_than_highway\", ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>manufacturer</th>\n",
+       "      <th>model</th>\n",
+       "      <th>displ</th>\n",
+       "      <th>year</th>\n",
+       "      <th>cyl</th>\n",
+       "      <th>trans</th>\n",
+       "      <th>drv</th>\n",
+       "      <th>city</th>\n",
+       "      <th>highway</th>\n",
+       "      <th>fl</th>\n",
+       "      <th>class_of_vehicle</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [manufacturer, model, displ, year, cyl, trans, drv, city, highway, fl, class_of_vehicle]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#better\n",
+    "mpg[mpg.city > mpg.highway]"
    ]
   },
   {
@@ -2251,7 +2445,8 @@
     }
    ],
    "source": [
-    "mpg.assign(mileage_difference = mpg[\"highway\"] - mpg['city']).sort_values(\"mileage_difference\", ascending=False)"
+    "mpg.assign(mileage_difference = mpg[\"highway\"] - mpg['city']).sort_values(\"mileage_difference\", ascending=False)\n",
+    "#mpg[mpg.mileage_difference == mpg.mileage_difference.max()]"
    ]
   },
   {
@@ -2265,64 +2460,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "manufacturer              ford\n",
-       "model                    civic\n",
-       "displ                      1.6\n",
-       "year                      1999\n",
-       "cyl                          4\n",
-       "trans                 auto(l4)\n",
-       "drv                          4\n",
-       "city                        14\n",
-       "highway                     20\n",
-       "fl                           c\n",
-       "class_of_vehicle    subcompact\n",
+       "manufacturer            audi\n",
+       "model                     a4\n",
+       "displ                    1.8\n",
+       "year                    1999\n",
+       "cyl                        4\n",
+       "trans               auto(av)\n",
+       "drv                        4\n",
+       "city                      15\n",
+       "highway                   23\n",
+       "fl                         d\n",
+       "class_of_vehicle     compact\n",
        "dtype: object"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mpg[mpg.class_of_vehicle == \"subcompact\"].sort_values(\"highway\").min()\n"
+    "mpg[mpg.class_of_vehicle == \"compact\"].sort_values(\"highway\").min()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "manufacturer        volkswagen\n",
-       "model                  tiburon\n",
-       "displ                      5.4\n",
+       "model                    jetta\n",
+       "displ                      3.3\n",
        "year                      2008\n",
-       "cyl                          8\n",
+       "cyl                          6\n",
        "trans               manual(m6)\n",
-       "drv                          r\n",
-       "city                        35\n",
+       "drv                          f\n",
+       "city                        33\n",
        "highway                     44\n",
        "fl                           r\n",
-       "class_of_vehicle    subcompact\n",
+       "class_of_vehicle       compact\n",
        "dtype: object"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mpg[mpg.class_of_vehicle == \"subcompact\"].sort_values(\"highway\").max()"
+    "mpg[mpg.class_of_vehicle == \"compact\"].sort_values(\"highway\").max()"
    ]
   },
   {
