added to big_o_notation.ipynb

--- a/big_o_notation.ipynb
+++ b/big_o_notation.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "47ac53971b96720461f40056902358c3e0c283b046a4016b4e448e166ece0988"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
